2012-09-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r128489.
        http://trac.webkit.org/changeset/128489
        https://bugs.webkit.org/show_bug.cgi?id=96686

        Does not compile on windows (Requested by jamesr on #webkit).

        * public/WebIDBDatabase.h:
        * public/WebIDBFactory.h:
        (WebIDBFactory):
        * src/IDBCallbacksProxy.cpp:
        (WebKit::IDBCallbacksProxy::onSuccess):
        (WebKit::IDBCallbacksProxy::onUpgradeNeeded):
        * src/IDBCallbacksProxy.h:
        (WebKit):
        (IDBCallbacksProxy):
        * src/IDBDatabaseBackendProxy.cpp:
        (WebKit::IDBDatabaseBackendProxy::registerFrontendCallbacks):
        (WebKit):
        * src/IDBDatabaseBackendProxy.h:
        (IDBDatabaseBackendProxy):
        * src/IDBFactoryBackendProxy.cpp:
        (WebKit::IDBFactoryBackendProxy::open):
        * src/IDBFactoryBackendProxy.h:
        (IDBFactoryBackendProxy):
        * src/WebIDBDatabaseImpl.cpp:
        (WebKit::WebIDBDatabaseImpl::WebIDBDatabaseImpl):
        (WebKit::WebIDBDatabaseImpl::close):
        (WebKit::WebIDBDatabaseImpl::open):
        (WebKit):
        * src/WebIDBDatabaseImpl.h:
        (WebIDBDatabaseImpl):
        * src/WebIDBFactoryImpl.cpp:
        (WebKit::WebIDBFactoryImpl::open):
        * src/WebIDBFactoryImpl.h:
        (WebIDBFactoryImpl):
        * tests/IDBAbortOnCorruptTest.cpp:
        (WebCore::TEST):
        * tests/IDBDatabaseBackendTest.cpp:

2012-09-13  Glenn Hartmann  <hartmanng@chromium.org>

        Add new accelerated compositing for overflow scroll setting.
        https://bugs.webkit.org/show_bug.cgi?id=95885

        Reviewed by James Robinson.

        wkb.ug/91117 introduces RenderLayer::usesCompositedScrolling(), which
        currently returns true if we're overflow scrolling and the element has
        been styled with '-webkit-overflow-scrolling: touch'. If this is true,