@@ -1,3 +1,15 @@
+2012-09-13  Robert Kroeger  <rjkroege@chromium.org>
+
+        [chromium] alter fling animation parameters.
+        https://bugs.webkit.org/show_bug.cgi?id=96666
+
+        Reviewed by Adrienne Walker.
+
+        Corrected the test to be non-fragile in the presence of altered fling
+        curve parameters.
+
+        * tests/PlatformGestureCurveTest.cpp:
+
 2012-09-13  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r128489.
